--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,10 +216,10 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Aplicaci&oacute;n Java EE para Wildfly y Openshift</h1>
+            <h1>Aplicaci&oacute;n Java EE para JBOSS EAP / Wildfly y Openshift</h1>
           </hgroup>
 			<br>
-			<p>@jlbugarin - @iluminatic</p>
+			<p>@jlbugarin</p>
 			<br>
 			<p>Visita: <a href="https://consultorjava.com/blog/">CONSULTORJAVA.com</a>
 			
